--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,9 @@ header {
 }
 
 footer {
-    background-color: lightgray;
+    background-color:#996600;
     text-align: center;
+    color: white;
 }
 
 main, footer{
@@ -27,9 +28,23 @@ h1 {
 
 h2{
     margin-left: 20px;
-    color: white;
+    color:white;
 }
 
-.learned {
-    color:black;
+#pageName {
+    color:#996600;
+}
+
+.learned,li {
+    
+    color:#4d4d4d;
+}
+
+ul {
+    list-style-type: square;
+}
+
+#greeting {
+    color: #4d4d4d;
+    margin-left: 20px;
 }
